margin textos y discover

--- a/Xcaret-VideoInteractivo/VideoInteractivo.html
+++ b/Xcaret-VideoInteractivo/VideoInteractivo.html
@@ -150,6 +150,7 @@
             .modal .modal-content .body .movil-size {
                 display: block !important;
                 width: 100% !important;
+                
             }
             .modal .modal-content .body .column img.logo {
                 height: 200px;
@@ -160,7 +161,7 @@
                 width: 200px !important;
             }
             .modal .modal-content .body .column .link {
-                margin-top: -15px;
+                margin-top: -5px;
             }
             .modal .modal-content .body .column .link a {
                 padding: 2px 4px;
@@ -170,6 +171,10 @@
                 color: #fff;
                 margin-top: -10px;
                 padding-bottom: 5px;
+            }
+            
+            .modal .modal-content .body .description p {
+                 margin-top: -10px;
             }
         </style>
     </head>
