--- a/Xcaret-VideoInteractivo/VideoInteractivoMargenFranjas.html
+++ b/Xcaret-VideoInteractivo/VideoInteractivoMargenFranjas.html
@@ -160,7 +160,7 @@
                 width: 200px !important;
             }
             .modal .modal-content .body .column .link {
-                margin-top: -15px;
+                margin-top: -5px;
             }
             .modal .modal-content .body .column .link a {
                 padding: 2px 4px;
@@ -170,6 +170,10 @@
                 color: #fff;
                 margin-top: -10px;
                 padding-bottom: 5px;
+            }
+            
+            .modal .modal-content .body .description p {
+                 margin-top: -15px;
             }
         </style>
     </head>
