--- a/Hoteles Oasis/fade-small.html
+++ b/Hoteles Oasis/fade-small.html
@@ -75,15 +75,15 @@
         }
 
         .fadesmall .bg.cover-1 {
-            background-image: url(https://i.imgur.com/YNpOffr.png)
+            background-image: url(https://i.imgur.com/uDoAwc8.jpg)
         }
 
         .fadesmall .bg.cover-2 {
-            background-image: url(https://i.imgur.com/Ux2LPR1.jpg)
+            background-image: url(https://i.imgur.com/QWMQLXd.jpg)
         }
 
         .fadesmall .bg.cover-3 {
-            background-image: url(https://i.imgur.com/6Mkcou3.jpg)
+            background-image: url(https://i.imgur.com/3k3kGwy.jpg)
         }
 
         .fadesmall .bzm_cover.bzm_pos_tl {
@@ -276,8 +276,7 @@
    <div class="bzm_wrapper carousel-wrapper size_300x250">
 
     <!-- Para quitar CTA se quita esta etiqueta y recordar quitar la propiedad CTA en el CSS -->
-        <div class="cta"> <a href="http://www.victoriassecret.mx/storeLocator.php" target="_blank">
-    <img src="https://i.imgur.com/vYvlKcd.png" style="height: 40px;"></a></div>   
+        
 
         <a href="http://www.victoriassecret.mx/" target="_blank">
             <div class="carousel-container">
@@ -290,7 +289,7 @@
                 <span class="bzm_text_small" style="color: #eb99b0">  *Por tiempo limitado. </span></div>
 
             <!-- LOGO -->
-            <div class="logo"> <img id="logo" src="https://i.imgur.com/4W22b7q.png"></div>
+            <div class="logo"> <img id="logo" src="https://i.imgur.com/50yQ8z7.png"></div>
 
 
                 <!--PARA QUITAR LOS BOTONES SOLO COMENTAR Y CERRAR-->
