--- a/Juguetron/Venetian.html
+++ b/Juguetron/Venetian.html
@@ -2313,6 +2313,15 @@ url('fonts/') format('opentype'),
 url('fonts/') format('svg');
 }
 /*#/#*/
+/*#/#*//*#i103.image.css:image/base/css*/
+#i103 { opacity: 1; }
+/*#/#*//*#i103.i104.positioning.css:positioning/base/css.2*/
+#i103 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 320px; height: 250px;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2325,8 +2334,6 @@ url('fonts/') format('svg');
 <dataimg id="i4" src="https://i.imgur.com/HtsLhq9.png"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/K0Mc9Zt.jpg"></dataimg>
-<!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/3Yix8od.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i44.image.html:image/html-->
@@ -2351,6 +2358,8 @@ url('fonts/') format('svg');
 <div id="i97">Encuéntranos en Insurgentes Sur</div>
 <!--#/#--><!--#i99.font.html:font/html-->
 <!--#/#--><!--#i101.font.html:font/html-->
+<!--#/#--><!--#i103.image.html:image/html-->
+<img id="i103" src="https://i.imgur.com/HtsLhq9.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2396,8 +2405,6 @@ document.addEventListener('DOMContentLoaded', function() {
 /*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
-
-/*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
 /*#/#*//*#i44.image.js:image/base/js*/
 
@@ -2509,6 +2516,10 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i97.i98.positioning.js:positioning/base/js.2*/
 bmShow('i97');
+/*#/#*//*#i103.image.js:image/base/js*/
+
+/*#/#*//*#i103.i104.positioning.js:positioning/base/js.2*/
+bmShow('i103');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2533,8 +2544,6 @@ customName: ;
 name: HtsLhq9.png; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: K0Mc9Zt.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: 3Yix8od.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
@@ -2587,4 +2596,9 @@ data: /*!*/{}/*!*/;
 name: Web Font: BentonSans; type: font-local; customName: ;
 /*#/#*//*#i101.font.meta:font/meta*/
 name: Font 1; type: ; customName: ;
+/*#/#*//*#i103.image.meta:image/meta*/
+name: HtsLhq9.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i103.i104.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
