--- a/SORIANA 02/fade.html
+++ b/SORIANA 02/fade.html
@@ -287,7 +287,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title"><b>¡¡ Porque me llevo más, mi mercado es soriana!!</b></span>
+            <div class="bzm_text"> <span class="bzm_text_title"><b>¡¡ Porque me llevo más, mi mercado es Soriana!!</b></span>
                </div>
 
             <!-- LOGO -->
