--- a/Juguetron/Venetian.html
+++ b/Juguetron/Venetian.html
@@ -2490,7 +2490,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i93.i94.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'http://whatsapp.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/nqAd8LmMzDu'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
