--- a/SORIANA 02/Venetian.html
+++ b/SORIANA 02/Venetian.html
@@ -2240,7 +2240,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i68 { background-color: ; opacity: 1;
 }
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 52.708333333333336%;
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 54.166666666666664%;
         -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
@@ -2401,13 +2401,13 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i68.i69.positioning.js:positioning/base/js.2*/
 bmShow('i68');
-/*#/#*//*#i68.i121.actions.js:actions/base/js.1*/
+/*#/#*//*#i68.i135.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
-    /*#i121.i122.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i135.i136.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.soriana.com/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2416,13 +2416,13 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i73.i74.positioning.js:positioning/base/js.2*/
 bmShow('i73');
-/*#/#*//*#i73.i119.actions.js:actions/base/js.1*/
+/*#/#*//*#i73.i137.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i73');
 
 el.addEventListener('click', function(e){
-    /*#i119.i120.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.google.com/maps/place/Soriana+S%C3%BAper+-+City+Tower/@20.6800594,-103.3864021,15z/data=!4m5!3m4!1s0x0:0xadf9f3a028106c5e!8m2!3d20.6803294!4d-103.3827209'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i137.i138.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.google.com/maps/place/Soriana+S%C3%BAper+-+City+Tower/@21.5835869,-103.5023467,7z/data=!4m5!3m4!1s0x0:0xadf9f3a028106c5e!8m2!3d20.6803294!4d-103.3827209?shorturl=1'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2433,13 +2433,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i79.i80.positioning.js:positioning/base/js.2*/
 bmShow('i79');
-/*#/#*//*#i79.i127.actions.js:actions/base/js.1*/
+/*#/#*//*#i79.i139.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i79');
 
 el.addEventListener('click', function(e){
-    /*#i127.i128.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://www.facebook.com/sharer/sharer.php?u=https://www.soriana.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i139.i140.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=https://www.soriana.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2450,13 +2450,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i81.i82.positioning.js:positioning/base/js.2*/
 bmShow('i81');
-/*#/#*//*#i81.i133.actions.js:actions/base/js.1*/
+/*#/#*//*#i81.i141.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
-    /*#i133.i134.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG8')) : window.open(dhtml.getVar('clickTAG8', 'whatsapp://send?text=https://www.soriana.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i141.i142.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=https://www.soriana.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2467,13 +2467,13 @@ if ('click' === 'click') {
 
 /*#/#*//*#i83.i84.positioning.js:positioning/base/js.2*/
 bmShow('i83');
-/*#/#*//*#i83.i131.actions.js:actions/base/js.1*/
+/*#/#*//*#i83.i143.actions.js:actions/base/js.1*/
 /* Name: On Click; */
 var el = document.getElementById('i83');
 
 el.addEventListener('click', function(e){
-    /*#i131.i132.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG7')) : window.open(dhtml.getVar('clickTAG7', 'https://twitter.com/login?redirect_after_login=%2Fhome%3Fstatus%3Dhttps%3A%2F%2Fwww.soriana.com'), dhtml.getVar('landingPageTarget', '_blank'));
+    /*#i143.i144.actions-clicktag.js:actions-clicktag/base/js.2*/
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/login?redirect_after_login=%2Fhome%3Fstatus%3Dhttps%3A%2F%2Fwww.soriana.com'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
