--- a/Hoteles Oasis/ZoomExp300x600.html
+++ b/Hoteles Oasis/ZoomExp300x600.html
@@ -182,7 +182,7 @@ a {text-decoration: none;}
 
                    
                    </div>
-                     <div style=";height:45px;text-align:right ;margin-top:12px; margin-right: 13px;"> <img src="https://i.imgur.com/usM3xot.png"" style="height:35px; text-decoration: none;"> 
+                     <div style=";height:45px;text-align:right ;margin-top:12px; margin-right: 13px;"> <img src="https://i.imgur.com/usM3xot.png" style="height:35px; text-decoration: none;"> 
 
                                        
                    </div>
