--- a/Juguetron/Cube.html
+++ b/Juguetron/Cube.html
@@ -864,7 +864,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">¡Encuéntranos en Insurgentes Sur 360!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/sT1gSKH.gif"/>
+<img id="i130" src="https://i.imgur.com/JtKlVW7.gif"/>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
 <img id="i224" src="https://i.imgur.com/sByWsfr.png"/>
 <!--#/#--><!--#i4.i296.image.html:image/html-->
@@ -898,7 +898,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/sT1gSKH.gif"/>
+<img id="i60" src="https://i.imgur.com/JtKlVW7.gif"/>
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¡Este 31 de marzo no te pierdas nuestra gran venta nocturna!</div>
 <!--#/#--><!--#i6.i298.image.html:image/html-->
