--- a/Juguetron/Venetian.html
+++ b/Juguetron/Venetian.html
@@ -2151,32 +2151,41 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
+/*#/#*//*#i103.image.css:image/base/css*/
+#i103 { opacity: 1; }
+/*#/#*//*#i103.i104.positioning.css:positioning/base/css.2*/
+#i103 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 320px; height: 320px;
+        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
+        transform: translate(0, 0) translate(0, 0) rotate(0deg);
+}
 /*#/#*//*#i44.image.css:image/base/css*/
 #i44 { opacity: 1; }
 /*#/#*//*#i44.i45.positioning.css:positioning/base/css.2*/
 #i44 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 120px;
-        -ms-transform: translate(0, 0) translate(0px, 361px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 361px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 361px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 361px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 400px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 400px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 400px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 400px) rotate(0deg);
 }
 /*#/#*//*#i46.image.css:image/base/css*/
 #i46 { opacity: 1; }
 /*#/#*//*#i46.i47.positioning.css:positioning/base/css.2*/
 #i46 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 140px; height: 37px;
-        -ms-transform: translate(0, 0) translate(88px, 344px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(88px, 344px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(88px, 344px) rotate(0deg);
-        transform: translate(0, 0) translate(88px, 344px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(88px, 384px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(88px, 384px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(88px, 384px) rotate(0deg);
+        transform: translate(0, 0) translate(88px, 384px) rotate(0deg);
 }
 /*#/#*//*#i63.text.css:text/base/css*/
-#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 21px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i63 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i63.i64.positioning.css:positioning/base/css.2*/
-#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 281px; height: 85px;
-        -ms-transform: translate(0, 0) translate(21px, 259px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(21px, 259px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(21px, 259px) rotate(0deg);
-        transform: translate(0, 0) translate(21px, 259px) rotate(0deg);
+#i63 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 281px; height: 41px;
+        -ms-transform: translate(0, 0) translate(20px, 325px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 325px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 325px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 325px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 40px; height: 39px;
@@ -2245,16 +2254,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
-/*#/#*//*#i68.shape.css:shape/base/css*/
-#i68 { background-color: ; opacity: 1;
-}
-/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
-#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 77.08333333333333%;
-        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
-}
 /*#/#*//*#i73.shape.css:shape/base/css*/
 #i73 { background-color: ; opacity: 1;
 }
@@ -2292,14 +2291,24 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(66px, 453px) rotate(0deg);
         transform: translate(0, 0) translate(66px, 453px) rotate(0deg);
 }
+/*#/#*//*#i68.shape.css:shape/base/css*/
+#i68 { background-color: ; opacity: 1;
+}
+/*#/#*//*#i68.i69.positioning.css:positioning/base/css.2*/
+#i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 77.08333333333333%;
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+}
 /*#/#*//*#i97.text.css:text/base/css*/
 #i97 { position: absolute; white-space: pre-wrap; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i97.i98.positioning.css:positioning/base/css.2*/
-#i97 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 323px; height: 56px;
-        -ms-transform: translate(0, 0) translate(3px, 324px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(3px, 324px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(3px, 324px) rotate(0deg);
-        transform: translate(0, 0) translate(3px, 324px) rotate(0deg);
+#i97 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 323px; height: 25px;
+        -ms-transform: translate(0, 0) translate(-6px, 366px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-6px, 366px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-6px, 366px) rotate(0deg);
+        transform: translate(0, 0) translate(-6px, 366px) rotate(0deg);
 }
 /*#/#*//*#i99.font-local.css:font/font-local/css*/
 /*#i99.i100.font-local.css:font-local/css.1*/
@@ -2313,15 +2322,6 @@ url('fonts/') format('opentype'),
 url('fonts/') format('svg');
 }
 /*#/#*/
-/*#/#*//*#i103.image.css:image/base/css*/
-#i103 { opacity: 1; }
-/*#/#*//*#i103.i104.positioning.css:positioning/base/css.2*/
-#i103 { position: absolute; top: 0px; left: 0px; overflow: hidden; width: 320px; height: 250px;
-        -ms-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
-        transform: translate(0, 0) translate(0, 0) rotate(0deg);
-}
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -2336,6 +2336,8 @@ url('fonts/') format('svg');
 <dataimg id="i5" src="https://i.imgur.com/K0Mc9Zt.jpg"></dataimg>
 <!--#/#-->
 </div>
+<!--#/#--><!--#i103.image.html:image/html-->
+<img id="i103" src="https://i.imgur.com/NvICEGB.png"/>
 <!--#/#--><!--#i44.image.html:image/html-->
 <img id="i44" src="https://i.imgur.com/H1KuNQV.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
@@ -2344,8 +2346,6 @@ url('fonts/') format('svg');
 <div id="i63">¡No te pierdas los fabulosos descuentos que tenemos para ti!</div>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/OTjwsg1.png"/>
-<!--#/#--><!--#i68.shape.html:shape/html-->
-<div id="i68"></div>
 <!--#/#--><!--#i73.shape.html:shape/html-->
 <div id="i73"></div>
 <!--#/#--><!--#i79.image.html:image/html-->
@@ -2354,12 +2354,12 @@ url('fonts/') format('svg');
 <img id="i81" src="https://i.imgur.com/EK4OBQN.png"/>
 <!--#/#--><!--#i83.image.html:image/html-->
 <img id="i83" src="https://i.imgur.com/19kZBWP.png"/>
+<!--#/#--><!--#i68.shape.html:shape/html-->
+<div id="i68"></div>
 <!--#/#--><!--#i97.text.html:text/html-->
 <div id="i97">Encuéntranos en Insurgentes Sur</div>
 <!--#/#--><!--#i99.font.html:font/html-->
 <!--#/#--><!--#i101.font.html:font/html-->
-<!--#/#--><!--#i103.image.html:image/html-->
-<img id="i103" src="https://i.imgur.com/HtsLhq9.png"/>
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
@@ -2406,6 +2406,10 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i5.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i103.image.js:image/base/js*/
+
+/*#/#*//*#i103.i104.positioning.js:positioning/base/js.2*/
+bmShow('i103');
 /*#/#*//*#i44.image.js:image/base/js*/
 
 /*#/#*//*#i44.i45.positioning.js:positioning/base/js.2*/
@@ -2516,10 +2520,6 @@ if ('click' === 'click') {
 }
 /*#/#*//*#i97.i98.positioning.js:positioning/base/js.2*/
 bmShow('i97');
-/*#/#*//*#i103.image.js:image/base/js*/
-
-/*#/#*//*#i103.i104.positioning.js:positioning/base/js.2*/
-bmShow('i103');
 /*#/#*//*#i9.visibility.js:visibility/js*/
 function bmShow(id) {
     var el = document.getElementById(id);
@@ -2546,6 +2546,11 @@ name: HtsLhq9.png; fileId: ; sourceTypeId: externalUrl;
 name: K0Mc9Zt.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i103.image.meta:image/meta*/
+name: NvICEGB.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: false;
+/*#/#*//*#i103.i104.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i44.image.meta:image/meta*/
 name: H1KuNQV.jpg; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
@@ -2565,10 +2570,6 @@ name: OTjwsg1.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i68.shape.meta:shape/meta*/
-name: Shape 2;
-/*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i73.shape.meta:shape/meta*/
 name: Shape 3;
 /*#/#*//*#i73.i74.positioning.meta:positioning/meta.2*/
@@ -2588,6 +2589,10 @@ name: 19kZBWP.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: false;
 /*#/#*//*#i83.i84.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i68.shape.meta:shape/meta*/
+name: Shape 2;
+/*#/#*//*#i68.i69.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i97.text.meta:text/meta*/
 name: Encuéntranos en Insurgentes Sur; customName: false;
 /*#/#*//*#i97.i98.positioning.meta:positioning/meta.2*/
@@ -2596,9 +2601,4 @@ data: /*!*/{}/*!*/;
 name: Web Font: BentonSans; type: font-local; customName: ;
 /*#/#*//*#i101.font.meta:font/meta*/
 name: Font 1; type: ; customName: ;
-/*#/#*//*#i103.image.meta:image/meta*/
-name: HtsLhq9.png; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: false;
-/*#/#*//*#i103.i104.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*/--><!--#/#-->
