--- a/HEB 2/FadeBig.html
+++ b/HEB 2/FadeBig.html
@@ -61,18 +61,18 @@
         }
 
         .bg.cover-1 {
-            background: url("https://i.imgur.com/myTkXhb.png");
+            background: url("https://i.imgur.com/rgjj43q.png");
             background-size: cover;
         }
 
         .bg.cover-2 {
-            background: url("https://i.imgur.com/1uWBdmg.png");
+            background: url("https://i.imgur.com/3jTtMnV.png");
             background-size: cover;
             
         }
 
         .bg.cover-3 {
-            background: url("https://i.imgur.com/lsbR7bM.png");
+            background: url("https://i.imgur.com/JsojRDN.png");
             background-size: cover;
             
         }
