--- a/HEB 2/ZoomExp300x600.html
+++ b/HEB 2/ZoomExp300x600.html
@@ -165,12 +165,12 @@ a {text-decoration: none;}
 </div>
 </li>
 </a>
- <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Lehigh Personal SemiBold; color:#000000; font-size:24px; text-decoration: none;"> La importancia de los aminoácidos para tu bebé</span><br>
+ <div class="ism_text"> <span class=" ism_text_title ism_text_bold" style="font-family:Lehigh Personal SemiBold; color:#000000; font-size:24px; text-decoration: none;"> La importancia de los aminoácidos para tu bebé.</span><br>
      <span class=" ism_text ism_text_Light" style="font-family:Lehigh Personal Light; color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> Los aminoácidos que forman las proteínas son vitales para que el cuerpo de tu bebé se desarrolle y realice sus funciones. Leer más...</p></span><br>
 
                  
                    </div>
-                     <div style=";height:5px;text-align:right ;margin-top:-25px; margin-right: 10px;"> <img src="https://i.imgur.com/MXmMdgk.png" style="height:30px; text-decoration: none;">
+                     <div style=";height:5px;text-align:right ;margin-top:-22px; margin-right: 10px;"> <img src="https://i.imgur.com/MXmMdgk.png" style="height:30px; text-decoration: none;">
 
                                        
                    </div>
