--- a/HEB 2/Cube.html
+++ b/HEB 2/Cube.html
@@ -894,7 +894,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i4.i14.text.html:text/html-->
 <div id="i14">La estimulación temprana tiene un impacto súper positivo en el primer año de los bebes.</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/Vuci4Ji.png"/>
+<img id="i130" src="https://i.imgur.com/cmnprfq.png"/>
 <!--#/#--><!--#i4.i342.image.html:image/html-->
 <img id="i342" src="https://i.imgur.com/MXmMdgk.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -912,7 +912,7 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i336.image.html:image/html-->
-<img id="i336" src="https://i.imgur.com/LjM7aFg.png"/>
+<img id="i336" src="https://i.imgur.com/ntp2fp5.png"/>
 <!--#/#--><!--#i5.i278.text.html:text/html-->
 <div id="i278">Redescubre el mundo con ellos, fortalece sus capacidades en sus primeros años.</div>
 <!--#/#--><!--#i5.i340.image.html:image/html-->
@@ -936,7 +936,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i334.image.html:image/html-->
 <img id="i334" src="https://i.imgur.com/MXmMdgk.png"/>
 <!--#/#--><!--#i6.i338.image.html:image/html-->
-<img id="i338" src="https://i.imgur.com/O5PDzhN.png"/>
+<img id="i338" src="https://i.imgur.com/7q9rPpW.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#--><!--#i6.i348.image.html:image/html-->
