--- a/HEB 2/ZoomExp300x600.html
+++ b/HEB 2/ZoomExp300x600.html
@@ -10,6 +10,16 @@
 
 <style>
 
+        @font-face {
+    font-family: Lehigh-Personal-Light; 
+    src: url(Lehigh-Personal-Light.woff);
+}
+    
+     @font-face {
+    font-family: Lehigh-Personal-SemiBold; 
+    src: url(Lehigh-Personal-SemiBold.woff);
+}
+    
 a {text-decoration: none;} 
 
 .zoom p {
