--- a/Juguetron/Cardenas1000/Cube.html
+++ b/Juguetron/Cardenas1000/Cube.html
@@ -976,7 +976,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i282.i283.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/nqAd8LmMzDu'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
