--- a/HEB 2/ZoomExp300x600.html
+++ b/HEB 2/ZoomExp300x600.html
@@ -72,6 +72,7 @@ a {text-decoration: none;}
             padding-left: 4px;
             text-decoration: none;
             width: 95%;
+            font-family: Lehigh-Personal-Light; 
         }
 
         .zoom .ism_text_title {
