--- a/HEB 2/ZoomExp300x600.html
+++ b/HEB 2/ZoomExp300x600.html
@@ -181,7 +181,7 @@ a {text-decoration: none;}
 </li>
 </a>
  <div class="ism_text"> <span class=" ism_text_title" style="color:#000000; font-size:24px; text-decoration: none;"> La importancia de los aminoácidos para tu bebé.</span><br>
-     <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> Los aminoácidos que forman las proteínas son vitales para que el cuerpo de tu bebé se desarrolle y realice sus funciones. Leer más...</p></span><br>
+     <span class="ism_text ism_text_medium" style="color:#000000; font-size:16px;  text-decoration: none; "><p  style="text-align: justify; width: 92%; margin-left: 15px; margin-top: -15px;"> Los aminoácidos que forman las proteínas son vitales para que el cuerpo de tu bebé se desarrolle y realice sus funciones. <b>Leer más...</b></p></span><br>
 
                  
                    </div>
