--- a/Juguetron/juruquilla/Cube.html
+++ b/Juguetron/juruquilla/Cube.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <head>
 <meta charset="UTF-8">
 
@@ -862,7 +862,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i14.text.html:text/html-->
-<div id="i14">¡Encuéntranos en la AV. Lázaro Cardenas!</div>
+<div id="i14">¡Encuéntranos en Juriquilla!</div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
 <img id="i130" src="https://i.imgur.com/JtKlVW7.gif"/>
 <!--#/#--><!--#i4.i224.image.html:image/html-->
@@ -884,7 +884,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i312.image.html:image/html-->
-<img id="i312" src="https://i.imgur.com/Dh2kEk7.jpg"/>
+<img id="i312" src="https://i.imgur.com/7AduaHL.jpg"/>
 <!--#/#--><!--#i5.i216.image.html:image/html-->
 <img id="i216" src="https://i.imgur.com/OTjwsg1.png"/>
 <!--#/#--><!--#i5.i228.image.html:image/html-->
@@ -976,7 +976,7 @@ var el = document.getElementById('i91');
 
 el.addEventListener('click', function(e){
     /*#i282.i283.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -993,7 +993,7 @@ var el = document.getElementById('i300');
 
 el.addEventListener('click', function(e){
     /*#i306.i307.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1010,7 +1010,7 @@ var el = document.getElementById('i302');
 
 el.addEventListener('click', function(e){
     /*#i308.i309.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1027,7 +1027,7 @@ var el = document.getElementById('i304');
 
 el.addEventListener('click', function(e){
     /*#i310.i311.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1066,7 +1066,7 @@ var el = document.getElementById('i95');
 
 el.addEventListener('click', function(e){
     /*#i278.i279.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1094,7 +1094,7 @@ var el = document.getElementById('i99');
 
 el.addEventListener('click', function(e){
     /*#i280.i281.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1111,7 +1111,7 @@ var el = document.getElementById('i316');
 
 el.addEventListener('click', function(e){
     /*#i322.i323.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1128,7 +1128,7 @@ var el = document.getElementById('i318');
 
 el.addEventListener('click', function(e){
     /*#i324.i325.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -1145,7 +1145,7 @@ var el = document.getElementById('i320');
 
 el.addEventListener('click', function(e){
     /*#i326.i327.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
