--- a/Juguetron/juruquilla/Venetian.html
+++ b/Juguetron/juruquilla/Venetian.html
@@ -2339,7 +2339,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i103.image.html:image/html-->
 <img id="i103" src="https://i.imgur.com/NvICEGB.png"/>
 <!--#/#--><!--#i44.image.html:image/html-->
-<img id="i44" src="https://i.imgur.com/av9bwWo.jpg"/>
+<img id="i44" src="https://i.imgur.com/1ZidjhA.jpg"/>
 <!--#/#--><!--#i46.image.html:image/html-->
 <img id="i46" src="https://i.imgur.com/PVWHGMp.png"/>
 <!--#/#--><!--#i63.text.html:text/html-->
@@ -2357,7 +2357,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i68.shape.html:shape/html-->
 <div id="i68"></div>
 <!--#/#--><!--#i97.text.html:text/html-->
-<div id="i97">Encuéntranos en Insurgentes Sur</div>
+<div id="i97">Encuéntranos en Juriquilla.</div>
 <!--#/#--><!--#i99.font.html:font/html-->
 <!--#/#--><!--#i101.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
@@ -2456,7 +2456,7 @@ var el = document.getElementById('i73');
 
 el.addEventListener('click', function(e){
     /*#i85.i86.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2473,7 +2473,7 @@ var el = document.getElementById('i79');
 
 el.addEventListener('click', function(e){
     /*#i91.i92.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=%20http:https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.facebook.com/sharer/sharer.php?u=%20http:https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2490,7 +2490,7 @@ var el = document.getElementById('i81');
 
 el.addEventListener('click', function(e){
     /*#i93.i94.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'whatsapp://send?text=Mira lo que he encontrado https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2507,7 +2507,7 @@ var el = document.getElementById('i83');
 
 el.addEventListener('click', function(e){
     /*#i95.i96.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status= https://goo.gl/maps/8JXUMtCtLtB2'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG5')) : window.open(dhtml.getVar('clickTAG5', 'https://twitter.com/home?status= https://goo.gl/maps/dTMZqK1Z1Z52'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
