--- a/Juguetron/Cardenas1000/Venetian.html
+++ b/Juguetron/Cardenas1000/Venetian.html
@@ -2357,7 +2357,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i68.shape.html:shape/html-->
 <div id="i68"></div>
 <!--#/#--><!--#i97.text.html:text/html-->
-<div id="i97">Encuéntranos en Insurgentes Sur</div>
+<div id="i97">Encuéntranos en la Av. Lázaro Cardenas.</div>
 <!--#/#--><!--#i99.font.html:font/html-->
 <!--#/#--><!--#i101.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
